# akshare-mcp-server

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt
src/: __init__.py  server.py
src/tools/: __init__.py  batch_data.py  export_data.py  financial_data.py  stock_info.py
src/utils/: __init__.py  data_formatter.py  file_manager.py  validators.py
