[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akshare-mcp-server"
version = "1.0.0"
description = "AKShare 股票财务数据 MCP 服务器"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AKShare MCP Server Contributors"}
]
keywords = ["mcp", "akshare", "stock", "financial", "a-share"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "akshare>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "aiofiles>=23.0.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/your-username/akshare-mcp-server"
Repository = "https://github.com/your-username/akshare-mcp-server.git"
Issues = "https://github.com/your-username/akshare-mcp-server/issues"

[project.scripts]
akshare-mcp-server = "src.server:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]